Import of MRAMBERG/Mojolicious-Plugin-RenderSteps-0.03 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-RenderSteps
gitpan-cpan-version:      0.03
gitpan-cpan-path:         MRAMBERG/Mojolicious-Plugin-RenderSteps-0.03.tar.gz
gitpan-cpan-author:       MRAMBERG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.03 31-05-2014
+  - Implement support for nesting steps
+  - Capture tx for not_found
+  - Fix typo in SYNOPSIS
+
 0.02 26-05-2014
   - Fix a pod typo
   - Implicit wait for actions running without a IOLoop
